updated swagger documentation
added examples
added swagger handler
updated go.mod
also updated helpers due to staticcheck error
