# docs/swagger.yaml
@@ -35,16 +35,25 @@ definitions:
   v1.orderPostRequest:
     properties:
       action:
+        enum:
+        - create
+        - approve
+        - cancel
+        example: create
         type: string
       order_id:
+        example: 1
         minimum: 1
         type: integer
       service_id:
+        example: 1
         minimum: 1
         type: integer
       sum:
+        example: "200"
         type: string
       user_id:
+        example: 1
         minimum: 1
         type: integer
     required:
@@ -67,8 +76,10 @@ definitions:
   v1.userPostRequest:
     properties:
       amount:
+        example: "200"
         type: string
       id:
+        example: 1
         minimum: 1
         type: integer
     required:
@@ -92,26 +103,31 @@ paths:
       description: Returns user's transaction history
       parameters:
       - description: user id
+        example: 1
         in: query
         minimum: 1
         name: id
         required: true
         type: integer
       - description: pagination limit
+        example: 10
         in: query
         minimum: 0
         name: limit
         type: integer
       - description: pagination page
+        example: 1
         in: query
         minimum: 1
         name: page
         type: integer
       - description: descending sort
+        example: true
         in: query
         name: desc
         type: boolean
       - description: sort by
+        example: date
         in: query
         name: order_by
         type: string
@@ -168,12 +184,14 @@ paths:
       description: Returns link to report file
       parameters:
       - description: year
+        example: 2022
         in: query
         minimum: 1900
         name: year
         required: true
         type: integer
       - description: month
+        example: 10
         in: query
         maximum: 12
         minimum: 1
@@ -224,6 +242,7 @@ paths:
       description: Returns user's balance
       parameters:
       - description: user id
+        example: 1
         in: query
         minimum: 1
         name: id
